--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^7.3.0",
     "autoprefixer": "^10.4.15",
+    "daisyui": "^3.6.5",
     "esbuild": "^0.19.2",
     "postcss": "^8.4.29",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.1",
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
