--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
+    "lint:eslint": "eslint 'app/javascript/**/*.js'",
+    "lint:prettier": "prettier app/javascript/**/*.js --check"
+  },
+  "devDependencies": {
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "3.0.3",
+    "prettier-config-standard": "^7.0.0"
   }
 }
