--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -117,3 +117,8 @@ Style/SymbolArray:
 # URISchemes: http, https
 Layout/LineLength:
   Max: 198
+
+AllCops:
+  Exclude:
+    - 'spec/rails_helper.rb'
+    - 'spec/spec_helper.rb'
