--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,12 @@
 {
     "env": {
         "browser": true,
-        "es2021": true,
+        "es2022": true,
         "node": true
     },
     "extends": [
         "eslint:recommended",
+        "standard",
         "prettier"
     ],
     "parserOptions": {
