--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "devDependencies": {
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "prettier": "3.0.3",
     "prettier-config-standard": "^7.0.0"
   }
