--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
+    "lint": "run-p lint:eslint lint:prettier",
     "lint:eslint": "eslint 'app/javascript/**/*.js'",
     "lint:prettier": "prettier app/javascript/**/*.js --check"
   },
@@ -26,6 +27,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.1",
     "eslint-plugin-promise": "^6.1.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "3.0.3",
     "prettier-config-standard": "^7.0.0"
   }
