slim-lintをCIでも行うように修正

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Lint Ruby files and JS files
         run: |
           yarn lint
+          bundle exec slim-lint app/views/ -c config/.slim_lint.yml
           bundle exec rubocop
 
   test:
