--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
     "npm-run-all": "^4.1.5",
     "prettier": "3.0.3",
     "prettier-config-standard": "^7.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.21"
 }
