.yarn/releases以外をgitignoreに追加

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,8 @@ node_modules/
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+.yarn
+!.yarn/releases/*
 
 # Ignore uploaded files in development
 /storage/*
