lintの指摘修正
slim-lintでControlStatementSpacingのバグがあるみたいなので、一旦OFFにする
https://github.com/sds/slim-lint/issues/201

--- a/config/.slim_lint.yml
+++ b/config/.slim_lint.yml
@@ -16,7 +16,7 @@ linters:
     max_consecutive: 2
 
   ControlStatementSpacing:
-    enabled: true
+    enabled: false
 
   EmbeddedEngines:
     enabled: false
